[gd_scene load_steps=33 format=3 uid="uid://b3ocr5doqonyu"]

[ext_resource type="Script" uid="uid://vgybkb0n3meq" path="res://Scripts/Foodtruck/FoodTruck.gd" id="1_rvaml"]
[ext_resource type="PackedScene" uid="uid://cv485pktorksn" path="res://Scenes/foodtruck/cookwear/cooktop.tscn" id="2_vnxue"]
[ext_resource type="PackedScene" uid="uid://caiym4bxd68to" path="res://Scenes/foodtruck/interior/table.tscn" id="3_87muv"]
[ext_resource type="PackedScene" uid="uid://bmfn7nnstf5ve" path="res://Scenes/foodtruck/cookwear/fryer.tscn" id="4_q7klp"]
[ext_resource type="PackedScene" uid="uid://bnnh4k2t41n0l" path="res://Scenes/foodtruck/cookwear/soda_machine.tscn" id="5_w5osk"]
[ext_resource type="PackedScene" uid="uid://b2x5v5mwhvvmy" path="res://Scenes/foodtruck/interior/finished_order_bell.tscn" id="11_na1yo"]
[ext_resource type="PackedScene" uid="uid://dq04w2oxbyp7f" path="res://Scenes/foodtruck/interior/light.tscn" id="12_o0it0"]
[ext_resource type="PackedScene" uid="uid://drk1thu8w54yx" path="res://Scenes/player/tools/meat_thermometer.tscn" id="13_fvj1u"]
[ext_resource type="Script" uid="uid://nkiw5hes200n" path="res://Scripts/Foodtruck/Areas/DeathBarrier.gd" id="13_irxj3"]
[ext_resource type="PackedScene" uid="uid://b38ntd24kv4sw" path="res://Scenes/foodtruck/interior/cabinet.tscn" id="13_kvgqm"]
[ext_resource type="PackedScene" uid="uid://tvxop5d67ap0" path="res://Scenes/foodtruck/interior/shelf.tscn" id="14_jugau"]
[ext_resource type="PackedScene" uid="uid://cqfghqikinccl" path="res://Assets/food_truck/food_truck_v3.glb" id="15_4upiy"]
[ext_resource type="PackedScene" uid="uid://ddyyiqy7ve87x" path="res://Scenes/player/tools/mop.tscn" id="16_1bg51"]
[ext_resource type="PackedScene" uid="uid://bqqwcdfwo3i5m" path="res://Scenes/foodtruck/interior/tv.tscn" id="16_5lsjn"]
[ext_resource type="PackedScene" uid="uid://dc5uapidqq6pc" path="res://Scenes/environment/food_safety_sign.tscn" id="16_6nta6"]
[ext_resource type="PackedScene" uid="uid://cc6na2w6f2gjp" path="res://Scenes/foodtruck/interior/trash_can.tscn" id="16_i5ql0"]
[ext_resource type="PackedScene" uid="uid://ba50clxb6cqko" path="res://Scenes/foodtruck/interior/grill.tscn" id="17_k0nvi"]
[ext_resource type="PackedScene" uid="uid://d3q6gfjo36jv1" path="res://Scenes/foodtruck/interior/boombox.tscn" id="17_ykid2"]
[ext_resource type="PackedScene" uid="uid://chp5hh84dsykh" path="res://Scenes/foodtruck/interior/fan.tscn" id="18_etb5g"]

[sub_resource type="BoxShape3D" id="BoxShape3D_t5xi5"]
size = Vector3(3.8725, 0.643555, 0.525513)

[sub_resource type="BoxShape3D" id="BoxShape3D_eq4wl"]
size = Vector3(8.06403, 3.35954, 6.64328)

[sub_resource type="BoxShape3D" id="BoxShape3D_3sp5k"]
size = Vector3(3.40479, 0.154332, 0.613831)

[sub_resource type="BoxShape3D" id="BoxShape3D_aej1q"]
size = Vector3(6.29565, 1, 3.86462)

[sub_resource type="BoxShape3D" id="BoxShape3D_qimnc"]
size = Vector3(6.93994, 3.53406, 0.20752)

[sub_resource type="BoxShape3D" id="BoxShape3D_megdg"]
size = Vector3(0.753998, 3.52615, 2.72693)

[sub_resource type="BoxShape3D" id="BoxShape3D_hry4e"]
size = Vector3(0.401928, 2.00425, 1.00075)

[sub_resource type="BoxShape3D" id="BoxShape3D_66uti"]
size = Vector3(0.297031, 3.55664, 2.99329)

[sub_resource type="BoxShape3D" id="BoxShape3D_ni10u"]
size = Vector3(4.1842, 1.25732, 0.200684)

[sub_resource type="BoxShape3D" id="BoxShape3D_cy1ld"]
size = Vector3(2.40131, 3.6098, 0.224854)

[sub_resource type="BoxShape3D" id="BoxShape3D_of7it"]
size = Vector3(6.13879, 0.168457, 2.77539)

[sub_resource type="BoxShape3D" id="BoxShape3D_fge8j"]
size = Vector3(0.913574, 3.53705, 0.164307)

[sub_resource type="BoxShape3D" id="BoxShape3D_m3460"]
size = Vector3(3.30786, 0.784668, 0.138916)

[node name="FoodTruck" type="Node3D" node_paths=PackedStringArray("dish_spawnpoints", "ordering_positions") groups=["interactable"]]
script = ExtResource("1_rvaml")
dish_spawnpoints = [NodePath("Food Tray Positions/1"), NodePath("Food Tray Positions/2"), NodePath("Food Tray Positions/3")]
ordering_positions = [NodePath("OrderingPositions/1"), NodePath("OrderingPositions/2"), NodePath("OrderingPositions/3"), NodePath("OrderingPositions/4")]

[node name="Food Truck Model" parent="." instance=ExtResource("15_4upiy")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.560616, 0, 0)

[node name="Interior" type="Node3D" parent="."]

[node name="Cooktop" parent="Interior" instance=ExtResource("2_vnxue")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.77243, 0.751515, 0.758109)

[node name="SodaMachine" parent="Interior" instance=ExtResource("5_w5osk")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.81292, 0.732442, -0.400492)

[node name="Fryer" parent="Interior" instance=ExtResource("4_q7klp")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.98494, 1.15639, 0.732743)

[node name="Table" parent="Interior" instance=ExtResource("3_87muv")]
transform = Transform3D(-4.37114e-09, 0, -0.1, 0, 0.1, 0, 0.1, 0, -4.37114e-09, 0.623259, 0.752259, 0.628773)

[node name="Trash Can" parent="Interior" instance=ExtResource("16_i5ql0")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 2.77934, 0.746105, 0.475787)

[node name="Cabinet" parent="Interior" instance=ExtResource("13_kvgqm")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.700682, 2.19182, 1.31547)

[node name="Lights" type="Node3D" parent="Interior"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.10291, -0.266257)

[node name="Light 1" parent="Interior/Lights" instance=ExtResource("12_o0it0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.510729, 0.465117, -0.128)

[node name="Light 2" parent="Interior/Lights" instance=ExtResource("12_o0it0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.612327, 0.399415, -0.128026)

[node name="Light 3" parent="Interior/Lights" instance=ExtResource("12_o0it0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.63205, 0.465, -0.128)

[node name="Finished Order Bell" parent="Interior" instance=ExtResource("11_na1yo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.525573, 1.85102, -1.38077)

[node name="TV" parent="Interior" instance=ExtResource("16_5lsjn")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-09, 0, -0.1, 0, 0.1, 0, 0.1, 0, -4.37114e-09, 3.14928, 2.21848, -0.288062)

[node name="Shelf" parent="Interior" instance=ExtResource("14_jugau")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.8078, 2.03243, -1.11942)

[node name="MeatThermometer" parent="Interior" instance=ExtResource("13_fvj1u")]
transform = Transform3D(-0.422618, 0.906308, 8.74227e-08, 0.906307, 0.422618, 0, -3.69464e-08, 7.92319e-08, -0.999999, -1.49703, 2.11233, -1.09728)

[node name="Mop" parent="Interior" instance=ExtResource("16_1bg51")]
transform = Transform3D(-0.766044, -0.642788, 8.74228e-08, -0.642788, 0.766044, 0, -6.69697e-08, -5.61943e-08, -1, -1.4322, 1.22687, -1.11286)

[node name="FoodSafetySign" parent="Interior" instance=ExtResource("16_6nta6")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.12119, 2.59028, -1.29121)

[node name="Grill" parent="Interior" instance=ExtResource("17_k0nvi")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.2757, 2.82329, 1.31376)

[node name="Boombox" parent="Interior" instance=ExtResource("17_ykid2")]
transform = Transform3D(0.489946, 0, -0.871753, 0, 1, 0, 0.871753, 0, 0.489946, 2.27706, 1.54254, -1.74237)

[node name="Fan" parent="Interior" instance=ExtResource("18_etb5g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.638339, 3.69387, -0.398408)
fan_speed = 16.5

[node name="Food Tray Positions" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.965504, 1.68007, -1.69716)

[node name="1" type="Node3D" parent="Food Tray Positions"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.42, 0, 0)

[node name="2" type="Node3D" parent="Food Tray Positions"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.42, 0, 0)

[node name="3" type="Node3D" parent="Food Tray Positions"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.2515, -0.00280333, -0.00480509)

[node name="New Order Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="OrderingPositions" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.56818, 2.38419e-07, -3.16919)

[node name="1" type="Node3D" parent="OrderingPositions"]

[node name="2" type="Node3D" parent="OrderingPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="3" type="Node3D" parent="OrderingPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="4" type="Node3D" parent="OrderingPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.5)

[node name="PickupPosition" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0684755, 0, -3.169)

[node name="EgressCheckpoint" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.89006, 4.76838e-07, -4.37445)

[node name="FinishedOrderPosition" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.217, 1.89886, -2.54513)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FinishedOrderPosition"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.235846, -0.131224, 0.816503)
shape = SubResource("BoxShape3D_t5xi5")

[node name="Death Barrier" type="Area3D" parent="."]
script = ExtResource("13_irxj3")

[node name="Death Barrier Shape" type="CollisionShape3D" parent="Death Barrier"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.563141, 2.17704, -1.7534)
shape = SubResource("BoxShape3D_eq4wl")

[node name="TreyPositionCollision" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.45319, -1.72917)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TreyPositionCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.923834, 0.0160323, 0.0993958)
shape = SubResource("BoxShape3D_3sp5k")

[node name="Floor" type="StaticBody3D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.022583, 0.246105, 0.09198)
shape = SubResource("BoxShape3D_aej1q")

[node name="TruckCollider" type="StaticBody3D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="LeftWall" type="CollisionShape3D" parent="TruckCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0153809, 1.97379, 1.33694)
shape = SubResource("BoxShape3D_qimnc")

[node name="FrontWall" type="CollisionShape3D" parent="TruckCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.03537, 2.03337, 0.0234994)
shape = SubResource("BoxShape3D_megdg")
debug_color = Color(0, 0.595, 0.7, 1)

[node name="SeatWall" type="CollisionShape3D" parent="TruckCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.56282, 0.969612, 0.692847)
shape = SubResource("BoxShape3D_hry4e")
debug_color = Color(0, 0.595, 0.7, 1)

[node name="BackWall" type="CollisionShape3D" parent="TruckCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.27445, 1.95944, -0.00970461)
shape = SubResource("BoxShape3D_66uti")

[node name="RightWall" type="CollisionShape3D" parent="TruckCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.31219, 0.856689, -1.41476)
shape = SubResource("BoxShape3D_ni10u")

[node name="RightFrontWall" type="CollisionShape3D" parent="TruckCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.94713, 1.99155, -1.37536)
shape = SubResource("BoxShape3D_cy1ld")

[node name="Ceiling" type="CollisionShape3D" parent="TruckCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.30719, 3.69999, -0.0166016)
shape = SubResource("BoxShape3D_of7it")

[node name="RightBackWall" type="CollisionShape3D" parent="TruckCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.01906, 1.98526, -1.39067)
shape = SubResource("BoxShape3D_fge8j")

[node name="RightTopWall" type="CollisionShape3D" parent="TruckCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.920155, 3.41861, -1.3652)
shape = SubResource("BoxShape3D_m3460")

[node name="GPUParticleColliders" type="Node3D" parent="."]

[node name="RightTopWall" type="GPUParticlesCollisionBox3D" parent="GPUParticleColliders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.453, -1.357)
size = Vector3(6.68274, 0.699684, 0.242462)

[node name="Ceiling" type="GPUParticlesCollisionBox3D" parent="GPUParticleColliders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.06883, 0)
size = Vector3(6.68274, 0.866755, 2.87323)

[connection signal="timeout" from="New Order Timer" to="." method="maybe_invoke_ordering"]
[connection signal="body_exited" from="Death Barrier" to="Death Barrier" method="body_exit"]
